hello-sub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-sub-service
  labels:
    app: hello-sub
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: hello-sub
