hello-sub/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-sub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: webapp.example.local
      http:
        paths:
          - path: /hello-world(/|$)(.*)
            backend:
              serviceName: hello-sub-service
              servicePort: 80
